--- a/src/Components/Footer/footer.module.css
+++ b/src/Components/Footer/footer.module.css
@@ -7,7 +7,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin: 0 99px 0 99px;
+  margin: 0 100px;
 }
 .contacts {
   display: flex;
