--- a/src/Components/Header/header.module.css
+++ b/src/Components/Header/header.module.css
@@ -1,4 +1,4 @@
-.wrapper {
+.header {
   position: absolute;
   top: 0;
   right: 0;
@@ -6,7 +6,7 @@
   z-index: 1;
   background-color: #000;
 }
-.wrapper.scroll {
+.header.scroll {
   position: fixed;
   animation: slideDown 0.5s ease-out;
 }
@@ -16,7 +16,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin: 25px 99px 25px 99px;
+  margin: 25px 100px;
 }
 
 .logo {
