--- a/src/Components/AboutCourse/aboutCourse.module.css
+++ b/src/Components/AboutCourse/aboutCourse.module.css
@@ -79,31 +79,31 @@
 }
 
 .toolImage:nth-child(1) > div:nth-child(1) {
-  background-image: url('../../../public/toolsIcons/typescriptlang-icon\ 1.svg');
+  background-image: url('./toolsIcons/typescriptlang-icon\ 1.svg');
 }
 
 .toolImage:nth-child(2) > div:nth-child(1) {
-  background-image: url('../../../public/toolsIcons/github-icon.svg');
+  background-image: url('./toolsIcons/github-icon.svg');
 }
 
 .toolImage:nth-child(3) > div:nth-child(1) {
-  background-image: url('../../../public/toolsIcons/graphql-icon\ 3.svg');
+  background-image: url('./toolsIcons/graphql-icon\ 3.svg');
 }
 
 .toolImage:nth-child(4) > div:nth-child(1) {
-  background-image: url('../../../public/toolsIcons/jest-icon.svg');
+  background-image: url('./toolsIcons/jest-icon.svg');
 }
 
 .toolImage:nth-child(5) > div:nth-child(1) {
-  background-image: url('../../../public/toolsIcons/next-js\ 1.svg');
+  background-image: url('./toolsIcons/next-js\ 1.svg');
 }
 
 .toolImage:nth-child(6) > div:nth-child(1) {
-  background-image: url('../../../public/toolsIcons/react-icon.svg');
+  background-image: url('./toolsIcons/react-icon.svg');
 }
 
 .toolImage:nth-child(7) > div:nth-child(1) {
-  background-image: url('../../../public/toolsIcons/redux-logo-svgrepo-com\ 1.svg');
+  background-image: url('./toolsIcons/redux-logo-svgrepo-com\ 1.svg');
 }
 
 .toolImage:nth-child(8) > div:nth-child(1) {
