--- a/src/Components/Footer/footer.module.css
+++ b/src/Components/Footer/footer.module.css
@@ -1,13 +1,11 @@
-.container {
-  background-image: url('src/assets/background-footer.svg');
-}
 .footer {
   height: 170px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin: 0 100px;
+  padding: 0 100px;
+  background: url('src/assets/background-footer.svg') center/cover no-repeat;
 }
 .contacts {
   display: flex;
@@ -37,4 +35,21 @@ a .text:hover {
   color: #e10098;
   text-decoration: underline black;
   cursor: pointer;
+}
+
+@media (max-width: 700px) {
+  .footer {
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    justify-content: center;
+    align-items: center;
+    padding: 30px 15px;
+    background-position: left;
+  }
+
+  .text {
+    font-size: 14px;
+  }
 }
