--- a/src/Components/Footer/footer.module.css
+++ b/src/Components/Footer/footer.module.css
@@ -37,6 +37,12 @@ a .text:hover {
   cursor: pointer;
 }
 
+@media (max-width: 800px) {
+  .footer {
+    padding: 0 50px;
+  }
+}
+
 @media (max-width: 700px) {
   .footer {
     height: auto;
