--- a/src/index.css
+++ b/src/index.css
@@ -47,5 +47,11 @@ body,
 }
 
 .main {
-  padding: 100px 100px 30px;
+  padding: 30px 100px;
+}
+
+@media (max-width: 800px) {
+  .main {
+    padding: 30px 50px;
+  }
 }
