--- a/src/Components/404/invalidRoute.module.css
+++ b/src/Components/404/invalidRoute.module.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@400;700&display=swap');
+
 .error {
   color: #e10098;
   display: flex;
@@ -5,15 +7,17 @@
   align-items: center;
   gap: 20px;
   margin: 0 auto;
-  font-size: 37px;
-  font-weight: 500;
+  font-size: 30px;
+  font-family: 'Jost', sans-serif;
 }
+
 .notfound {
   font-size: 130px;
 }
 
 .goBack {
   cursor: pointer;
+  font-family: 'Jost', sans-serif;
 }
 
 .goBack:hover {
