--- a/src/Components/Footer/footer.module.css
+++ b/src/Components/Footer/footer.module.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@400;700&display=swap');
+
 .footer {
   height: 170px;
   display: flex;
@@ -6,6 +8,7 @@
   align-items: center;
   padding: 0 100px;
   background: url('src/assets/background-footer.svg') center/cover no-repeat;
+  font-family: 'Jost', sans-serif;
 }
 .contacts {
   display: flex;
