--- a/src/Components/Header/header.module.css
+++ b/src/Components/Header/header.module.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@400;700&display=swap');
+
 .header {
   position: sticky;
   top: 0;
@@ -6,6 +8,7 @@
   z-index: 1;
   background-color: rgba(0, 0, 0, 1);
   padding: 25px 0;
+  font-family: 'Jost', sans-serif;
 }
 .header.scroll {
   background-color: rgba(0, 0, 0, 0.5);
@@ -81,23 +84,24 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  gap: 10px;
+  gap: 5px;
   background-color: #000;
-  padding: 1px;
+  padding: 0px;
   color: #fff;
   font-size: 15px;
   border: 1px solid #e10098;
   border-radius: 10px;
   cursor: pointer;
+  font-family: 'Jost', sans-serif;
 }
 .blackButtonLang div {
   padding: 3px;
 }
 .langActive {
   background-color: #e10098;
-  padding: 3px;
   color: #000;
   border-radius: 8px;
+  transition: all 0.3s;
 }
 
 @keyframes scrollMenu {
