--- a/src/Components/Request/request.module.css
+++ b/src/Components/Request/request.module.css
@@ -2,10 +2,93 @@
   display: flex;
   flex-direction: column;
   background-color: rgba(129, 129, 129, 0.24);
-  padding: 35px 25px;
+  padding: 35px 0;
   border-radius: 20px;
   font-size: 20px;
   flex-basis: 40%;
   flex-grow: 1;
   margin: 15px;
+}
+
+.requestInnerContainer {
+  flex-grow: 1;
+  position: relative;
+  overflow: hidden;
+}
+
+.variablesAndHeadersContainer {
+  flex-grow: 1;
+  position: relative;
+  overflow: hidden;
+  border-top: solid 3px rgba(237, 240, 242, 0.38);
+  padding-top: 35px;
+  /* box-shadow: 0px 48px 22px -47px rgba(237, 240, 242, 0.38) inset; */
+}
+
+.buttonsContainer {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  top: 0%;
+  right: -10px;
+}
+
+.variablesAndHeadersContainerVH {
+  flex-grow: 1;
+  position: relative;
+  overflow: hidden;
+  border-top: solid 3px rgba(237, 240, 242, 0.38);
+  padding-top: 35px;
+  /* box-shadow: 0px 48px 22px -47px rgba(237, 240, 242, 0.38) inset; */
+}
+
+.buttonsContainerVH {
+  position: absolute;
+  display: flex;
+  top: -15px;
+  left: 0%;
+}
+
+.variablesAndHeadersContainer > div:nth-child(1) > div:nth-child(1) {
+  margin-top: 35px;
+}
+
+.button {
+  background-color: rgba(129, 129, 129, 0.95);
+  border: solid 1px rgba(129, 129, 129, 0.95);
+  border-radius: 10px;
+  margin: 5px 0;
+  width: 110px;
+  height: 35px;
+  color: #474747;
+  font-size: 17px;
+  transition: 0.1s ease-in;
+  cursor: pointer;
+  user-select: none;
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
+}
+
+.buttonVH {
+  padding-top: 10px;
+  margin: 5px;
+}
+
+.variablesAndHeadersContainerVH > div:nth-child(1) > div:nth-child(1) {
+  margin-left: 10px;
+}
+
+.button:hover {
+  background-color: #fbc1e9;
+  background-color: #fbc1e9;
+  color: #474747;
+}
+
+.requestTextArea {
+  margin: 0 50px 0 20px;
+}
+
+[contenteditable]:focus {
+  outline: 0px solid transparent;
 }
