--- a/src/Pages/GraphlPage/graphlPage.module.css
+++ b/src/Pages/GraphlPage/graphlPage.module.css
@@ -6,13 +6,12 @@
   display: flex;
   color: #ffffff;
   width: 100%;
-  min-height: 95vh;
+  min-height: 80vh;
   background-image: image-set(
     url('./requestIcons/requestBg.png') 1x,
     url('./requestIcons/requestBg@2x.png') 2x
   );
   box-sizing: border-box;
-  padding: 15px;
   justify-content: space-between;
 }
 
@@ -27,12 +26,22 @@
   transition: 0.1s ease-in;
   cursor: pointer;
   position: absolute;
-  top: 50%;
+  top: 30%;
   left: -2%;
   user-select: none;
 }
 
 .button:hover {
+  background-color: #f921b5;
+  border: solid 1px #f921b5;
+  border-radius: 10px;
+  padding: 3px 28px;
+  color: #ffffff;
+  font-size: 17px;
+  margin: 20px;
+}
+
+.button:active {
   background-color: #f921b5;
   border: solid 1px #f921b5;
   border-radius: 10px;
