--- a/src/Components/Request/request.module.css
+++ b/src/Components/Request/request.module.css
@@ -49,6 +49,10 @@
   left: 0%;
 }
 
+.containerClosed {
+  flex-grow: 0;
+}
+
 .variablesAndHeadersContainer > div:nth-child(1) > div:nth-child(1) {
   margin-top: 35px;
 }
@@ -70,6 +74,26 @@
   padding-left: 10px;
 }
 
+.buttonOpenClose {
+  background-color: #fbc1e9;
+  color: #474747;
+  border: solid 1px rgba(129, 129, 129, 0.95);
+  opacity: 0.5;
+  border-radius: 10px;
+  margin: 5px 0;
+  width: 38px;
+  height: 35px;
+  font-size: 26px;
+  transition: 0.1s ease-in;
+  cursor: pointer;
+  user-select: none;
+  display: flex;
+  justify-content: center;
+}
+.buttonOpenClose:hover {
+  opacity: 0.7;
+}
+
 .buttonVH {
   padding-top: 10px;
   margin: 5px;
@@ -80,7 +104,6 @@
 }
 
 .button:hover {
-  background-color: #fbc1e9;
   background-color: #fbc1e9;
   color: #474747;
 }
