--- a/src/Components/SignUp/sign.module.css
+++ b/src/Components/SignUp/sign.module.css
@@ -1,81 +1,83 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost:wght@400;700&display=swap');
 
 .container {
-    font-family: 'Jost', sans-serif;
-    display: flex;
-    justify-content: center;
-    background-color: black;
-    color: aliceblue;
-    background-image: url("../../assets/background_sign.svg");
-    background-repeat: no-repeat;
-    background-position: center;
-
+  font-family: 'Jost', sans-serif;
+  display: flex;
+  justify-content: center;
+  background-color: black;
+  color: aliceblue;
+  background-image: url('../../assets/background_sign.svg');
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .title {
-    margin: 0px;
-    text-align: center;
-    font-size: 20px;
+  margin: 0px;
+  text-align: center;
+  font-size: 20px;
 }
 
 form {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    background-color: rgba(129, 129, 129, 0.24);
-    padding: 35px 25px;
-    border-radius: 20px;
-    width: 420px;
-    margin-top: 3%;
-    margin-bottom: 3%;
-
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  background-color: rgba(129, 129, 129, 0.24);
+  padding: 35px 25px;
+  border-radius: 20px;
+  width: 420px;
+  margin-top: 3%;
+  margin-bottom: 3%;
 }
 
 .field {
-    border-bottom: solid 0.1px #E10098;
+  border-bottom: solid 0.1px #e10098;
 }
 
 p {
-    font-size: 17px;
-    margin: 0;
+  font-size: 15px;
+  margin: 0;
+  color: #e10098;
 }
-
+.already_registered {
+  color: #fff;
+}
 input {
-    width: 100%;
-    height: 30px;
-    border: none;
-    background-color: #ffffff00;
-    color: #ffffff;
-    font-size: 17px;
+  width: 100%;
+  height: 30px;
+  border: none;
+  background-color: #ffffff00;
+  color: #ffffff;
+  font-size: 17px;
 }
 
 input::placeholder {
-    color: #FFF;
+  color: #fff;
 }
 
 input:focus-visible {
-    outline: none;
+  outline: none;
 }
 
 .submit {
-    display: flex;
-    justify-content: center;
-    margin-top: 5%;
+  display: flex;
+  justify-content: center;
+  margin-top: 5%;
 }
 
 button {
-    background-color: rgba(225, 0, 152, 0.00);
-    border: solid 1px #E10098;
-    border-radius: 10px;
-    padding: 3px 28px;
-    color: #FFF;
-    font-size: 17px;
+  background-color: rgba(225, 0, 152, 0);
+  border: solid 1px #e10098;
+  border-radius: 10px;
+  padding: 3px 28px;
+  color: #fff;
+  font-size: 17px;
+  cursor: pointer;
 }
 
 .registered {
-    text-align: center;
+  text-align: center;
 }
 
 .sign {
-    color: #E10098;
+  color: #e10098;
 }
