--- a/src/Components/Request/request.module.css
+++ b/src/Components/Request/request.module.css
@@ -14,15 +14,14 @@
   flex-grow: 1;
   position: relative;
   overflow: hidden;
+  padding-left: 20px;
 }
 
 .variablesAndHeadersContainer {
-  flex-grow: 1;
   position: relative;
   overflow: hidden;
   border-top: solid 3px rgba(237, 240, 242, 0.38);
   padding-top: 35px;
-  /* box-shadow: 0px 48px 22px -47px rgba(237, 240, 242, 0.38) inset; */
 }
 
 .buttonsContainer {
@@ -34,12 +33,10 @@
 }
 
 .variablesAndHeadersContainerVH {
-  flex-grow: 1;
   position: relative;
   overflow: hidden;
   border-top: solid 3px rgba(237, 240, 242, 0.38);
   padding-top: 35px;
-  /* box-shadow: 0px 48px 22px -47px rgba(237, 240, 242, 0.38) inset; */
 }
 
 .buttonsContainerVH {
@@ -74,38 +71,17 @@
   padding-left: 10px;
 }
 
-.buttonOpenClose {
-  background-color: #fbc1e9;
-  color: #474747;
-  border: solid 1px rgba(129, 129, 129, 0.95);
-  opacity: 0.5;
-  border-radius: 10px;
-  margin: 5px 0;
-  width: 38px;
-  height: 35px;
-  font-size: 26px;
-  transition: 0.1s ease-in;
-  cursor: pointer;
-  user-select: none;
-  display: flex;
-  justify-content: center;
-}
-.buttonOpenClose:hover {
-  opacity: 0.7;
-}
-
 .buttonVH {
   padding-top: 10px;
   margin: 5px;
 }
 
 .variablesAndHeadersContainerVH > div:nth-child(1) > div:nth-child(1) {
-  margin-left: 10px;
+  margin-left: 20px;
 }
 
 .button:hover {
   background-color: #fbc1e9;
-  color: #474747;
 }
 
 .requestTextArea {
@@ -114,4 +90,8 @@
 
 [contenteditable]:focus {
   outline: 0px solid transparent;
+}
+
+.buttonActive {
+  background-color: #fbc1e9;
 }
