--- a/src/Components/Welcome/welcome.module.css
+++ b/src/Components/Welcome/welcome.module.css
@@ -1,6 +1,6 @@
 .welcomeContainer {
   height: 87vh;
-  width: 100%;
+  width: 95vw;
   background-image: image-set(
     url('./welcomeIcons/welcomeBg.png') 1x,
     url('./welcomeIcons/welcomeBg@2x.png') 2x
