--- a/src/Components/RequestEditor/QueryTextEditor/queryTextEditor.module.css
+++ b/src/Components/RequestEditor/QueryTextEditor/queryTextEditor.module.css
@@ -2,3 +2,12 @@
   content: attr(placeholder);
   opacity: 0.6;
 }
+.requestTextArea {
+  width: 100%;
+  height: 100%;
+  font-size: 18px;
+  background-color: transparent;
+  border: 0;
+  color: white;
+  outline: 0;
+}
