--- a/src/Components/SchemaInfo/schemaInfo.module.css
+++ b/src/Components/SchemaInfo/schemaInfo.module.css
@@ -1,11 +1,10 @@
-.responseContainer {
+.schemaContainer {
   display: flex;
   flex-direction: column;
   background-color: rgb(74 74 74 / 85%);
   padding: 35px 25px;
   border-radius: 20px;
-  font-size: 20px;
-  min-width: 25%;
+  font-size: 1em;
   flex-grow: 1;
   margin: 15px;
   transition: 1s ease-in-out;
@@ -18,13 +17,13 @@
 }
 
 .title {
-  font-size: 25px;
+  font-size: 1.25em;
   color: #e10098;
   margin: 0px;
 }
 
 .titleSchema {
-  font-size: 20px;
+  font-size: 1em;
   color: #e10098;
   margin: 0px;
 }
