feat: add localization to request, 404 render test, fix styles

--- a/src/Components/RequestEditor/request.module.css
+++ b/src/Components/RequestEditor/request.module.css
@@ -71,6 +71,11 @@
   padding-left: 10px;
 }
 
+.button img {
+  width: 20px;
+  height: 20px;
+}
+
 .buttonVH {
   padding-top: 10px;
   margin: 5px;
