--- a/src/Components/Header/header.module.css
+++ b/src/Components/Header/header.module.css
@@ -47,8 +47,11 @@
 .home {
   color: #fff;
   font-size: 17px;
+  cursor: pointer;
 }
-
+.home:hover {
+  color: #e10098;
+}
 .navDesktop {
   display: flex;
   flex-direction: row;
@@ -151,5 +154,8 @@
 
   .container {
     padding: 0 15px;
+  }
+  .pinkButton:first-child {
+    margin-bottom: 10px;
   }
 }
