feat: add adaptive layout to main page

--- a/src/Components/Welcome/welcome.module.css
+++ b/src/Components/Welcome/welcome.module.css
@@ -94,3 +94,14 @@
     height: 60px;
   }
 }
+
+@media screen and (max-width: 400px) {
+  .welcomeExample {
+    padding: 10px;
+    width: 250px;
+    font-size: 14px;
+  }
+  .welcomeLogoVertical {
+    display: none;
+  }
+}
