--- a/src/Components/AboutGraphl/aboutGraphi.module.css
+++ b/src/Components/AboutGraphl/aboutGraphi.module.css
@@ -84,3 +84,26 @@
     padding: 25px;
   }
 }
+@media screen and (max-width: 400px) {
+  .container {
+    margin: 30px 0px;
+  }
+  .header {
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+  .text {
+    font-size: 16px;
+    padding: 15px;
+  }
+
+  .exampleCode {
+    padding: 10px;
+    width: 250px;
+    font-size: 16px;
+  }
+  .exampleCodeText {
+    font-size: 16px;
+    text-align: center;
+  }
+}
