feat: add adaptive layout to graphi-ql

--- a/src/Components/RequestEditor/HeadersEditor/headersEditor.module.css
+++ b/src/Components/RequestEditor/HeadersEditor/headersEditor.module.css
@@ -8,3 +8,10 @@
   content: attr(placeholder);
   opacity: 0.6;
 }
+@media (max-width: 600px) {
+  .headersContainer {
+    font-size: 16px;
+    min-height: 100px;
+    padding: 0 10px;
+  }
+}
