--- a/src/Components/RequestEditor/QueryTextEditor/queryTextEditor.module.css
+++ b/src/Components/RequestEditor/QueryTextEditor/queryTextEditor.module.css
@@ -11,3 +11,10 @@
   color: white;
   outline: 0;
 }
+
+@media (max-width: 800px) {
+  .requestTextArea {
+    margin: 8px 0;
+    font-size: 14px;
+  }
+}
