--- a/src/Components/RequestEditor/UrlEditor/urlEditor.module.css
+++ b/src/Components/RequestEditor/UrlEditor/urlEditor.module.css
@@ -20,9 +20,25 @@
   padding: 0 10px;
   height: 50%;
   flex-grow: 1;
+  font-family: 'Jost', sans-serif;
 }
 
-[contentEditable='true']:empty:before {
-  content: attr(placeholder);
-  opacity: 0.6;
+.urlTextArea::placeholder {
+  opacity: 0.5;
+}
+
+@media (max-width: 700px) {
+  .urlContainer {
+    flex-direction: column;
+    padding: 5px;
+    margin-bottom: 10px;
+  }
+  .urlHeader {
+    font-size: 16px;
+  }
+  .urlTextArea {
+    height: 40%;
+    width: 90%;
+    font-size: 16px;
+  }
 }
