--- a/src/Components/ResponseEditor/response.module.css
+++ b/src/Components/ResponseEditor/response.module.css
@@ -9,3 +9,11 @@
   flex-grow: 1;
   margin: 15px;
 }
+
+@media (max-width: 600px) {
+  .responseContainer {
+    margin: 15px 0;
+    padding: 20px 15px;
+    font-size: 16px;
+  }
+}
