--- a/src/Components/SchemaInfo/schemaInfo.module.css
+++ b/src/Components/SchemaInfo/schemaInfo.module.css
@@ -59,3 +59,22 @@
 .description {
   margin-top: 20px;
 }
+
+@media (max-width: 600px) {
+  .schemaContainer {
+    margin: 15px 0;
+    padding: 20px 20px;
+  }
+  .schemaInformation {
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 15px;
+  }
+  .detailContainer {
+    flex-direction: column;
+    gap: 20px;
+  }
+  .containerTypes {
+    margin-top: 12px;
+  }
+}
