--- a/src/Pages/GraphlPage/graphlPage.module.css
+++ b/src/Pages/GraphlPage/graphlPage.module.css
@@ -50,3 +50,17 @@
   font-size: 17px;
   margin: 20px;
 }
+
+@media (max-width: 1100px) {
+  .container {
+    flex-direction: column;
+    justify-content: space-between;
+  }
+}
+
+@media (max-width: 800px) {
+  .button {
+    top: 85px;
+    margin: 10px 20px;
+  }
+}
