--- a/src/Components/RequestEditor/request.module.css
+++ b/src/Components/RequestEditor/request.module.css
@@ -11,6 +11,9 @@
 }
 
 .requestInnerContainer {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   flex-grow: 1;
   position: relative;
   overflow: hidden;
