--- a/src/Components/AboutTeam/aboutTeam.module.css
+++ b/src/Components/AboutTeam/aboutTeam.module.css
@@ -54,6 +54,10 @@
 .link {
   display: inline-block;
   margin-right: 10px;
+  color: #fff;
+}
+.link:hover {
+  color: #e10098;
 }
 
 @media screen and (max-width: 900px) {
