--- a/src/Components/AboutTeam/aboutTeam.module.css
+++ b/src/Components/AboutTeam/aboutTeam.module.css
@@ -39,7 +39,10 @@
 }
 
 .developerImage {
+  width: 300px;
   margin-right: 30px;
+  object-fit: cover;
+  aspect-ratio: 1/1;
 }
 
 .developerInfoHeader {
