--- a/src/Components/AboutTeam/aboutTeam.module.css
+++ b/src/Components/AboutTeam/aboutTeam.module.css
@@ -76,7 +76,7 @@
   .developerImage {
     margin-right: 0px;
     margin-bottom: 30px;
-    border-radius: 20px;
+    width: 100%;
   }
 
   .developerInfo {
