refactor: response design

--- a/src/Components/SchemaInfo/schemaInfo.module.css
+++ b/src/Components/SchemaInfo/schemaInfo.module.css
@@ -59,3 +59,14 @@
 .description {
   margin-top: 20px;
 }
+
+@media screen and (max-width: 900px) {
+  .schemaInformation {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .detailContainer {
+    flex-direction: column;
+  }
+}
