--- a/src/Components/Footer/footer.module.css
+++ b/src/Components/Footer/footer.module.css
@@ -7,7 +7,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 100px;
-  background: url('src/assets/background-footer.svg') center/cover no-repeat;
+  background: url('./background-footer.svg') center/cover no-repeat;
   font-family: 'Jost', sans-serif;
 }
 .contacts {
