--- a/src/Components/SignUp/sign.module.css
+++ b/src/Components/SignUp/sign.module.css
@@ -6,7 +6,7 @@
   justify-content: center;
   background-color: black;
   color: aliceblue;
-  background-image: url('../../assets/background_sign.svg');
+  background-image: url('./background_sign.svg');
   background-repeat: no-repeat;
   background-position: center;
 }
